week06-eks/manifests/networkpolicy/deny-all.yaml
# Block ALL traffic by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: devops-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# Only allow traffic TO devops-api pods on port 80
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api
  namespace: devops-app
spec:
  podSelector:
    matchLabels:
      app: devops-api
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 80
